# NewsG

./: README.md
Latex_report/: main.tex  (+1 more)
simulationg4/: CMakeLists.txt  README.md  SR_OUTPUT_He_in_Ar_98_CH4.txt  env.sh  nik.py
simulationg4/SPC_Simulation/: SPC_Simulation.cc  SR_OUTPUT_150_Ar_98_CH4.srim  SR_OUTPUT_750_H_in_N2_NoCAB.srim  SR_OUTPUT_825_Ar_98_CH4.srim  alpha_ArCO2_70_30.txt  physicsList.txt
simulationg4/SPC_Simulation/GasFiles/: gasFile_100_50_Ar_80_CF4.gas  gasFile_150_50_Ar_98_CH4_imp_O2_10.gas  gasFile_150_50_Ar_98_CH4_imp_O2_50.gas  gasFile_150_50_isobutane.gas  gasFile_150_50_isobutane_10_He.gas  gasFile_760_100_Ar_30_CH4.gas  gasFile_760_100_Ar_40_CH4.gas  gasFile_760_100_Ar_60_CH4.gas  gasFile_760_100_Ar_80_CH4.gas  gasFile_760_100_Ar_95_CH4.gas  gasFile_760_100_Ar_98_CH4.gas  gasFile_760_100_Xe.gas  gasFile_760_50_Ar_10_CH4.gas  gasFile_760_50_Ar_60_CF4.gas  gasFile_760_50_Ar_70_CF4.gas  gasFile_760_50_Ar_90_CF4.gas  gasFile_760_50_Ar_90_CH4.gas  gasFile_760_50_Ar_98_CH4_imp_O2_0p1.gas  gasFile_760_50_Ar_98_CH4_imp_O2_0p5.gas  gasFile_760_50_Ar_98_CH4_imp_O2_10.gas  gasFile_760_50_Ar_98_CH4_imp_O2_20.gas  gasFile_760_50_Ar_98_CH4_imp_O2_5.gas  gasFile_760_50_CF4.gas  gasFile_760_50_CH4.gas  gasFile_760_50_N2.gas  gasFile_760_50_Ne.gas  gasFile_840_50_Ar_98_CH4.gas  gasFile_840_50_Ar_98_CH4_imp_O2_20.gas  gasFile_840_50_isobutane.gas
simulationg4/SPC_Simulation/GasFiles/GasPlots/: TransportParameters.cc  sedinePlots.C
simulationg4/SPC_Simulation/condor/: generalBatch.sh  spc-condor.py
simulationg4/SPC_Simulation/include/: DetectorConstructionMessenger.hh  ElectronAvalanche.hh  Electronics.hh  EventMessenger.hh  InitialisationParameters.hh  IonDrift.hh  PhysicsList.hh  SteppingAction.hh  Trajectory.hh  UserG4FastSimulationModel.hh
simulationg4/SPC_Simulation/muonData/: MakeMuonHistogram.C
simulationg4/SPC_Simulation/sensors/ACHINOS_135cm_1p7mm_11anode/: README.md
simulationg4/SPC_Simulation/sensors/ACHINOS_30cm_1mm_11anode_NeutronStudy/: anode_locations.txt
simulationg4/SPC_Simulation/sensors/BOULBY_15cm_1p7mm_3800V/: PRNSOL.lis
simulationg4/SPC_Simulation/sensors/BasicSensor/: NLIST.lis
simulationg4/SPC_Simulation/sensors/NITROGEN_15cm_3mm_3500V/: NLIST.lis  file.DSP  file0.stat  p100mm_list.txt  p10mm_list.txt  p50mm_list.txt
simulationg4/SPC_Simulation/sensors/NITROGEN_15cm_3mm_5000V/: PRNSOL.lis
simulationg4/SPC_Simulation/sensors/SNOGLOBE_135cm_3mm_1100V/: PRNSOL.lis
simulationg4/SPC_Simulation/src/: DetectorConstruction.cc  ElectronAvalanche.cc  ElectronDrift.cc  EventAction.cc  FieldMap.cc  IonDrift.cc  Ionisation.cc  MyHit.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunMessenger.cc  StepMaxMessenger.cc  SteppingAction.cc  TrajectoryPoint.cc  UserG4SrimModel.cc
simulationg4/SignalTest/: CMakeLists.txt  SignalTest.cc
simulationg4/SignalTest/include/: ChargeCarrier.hh  DetectorConstruction.hh  Electronics.hh  EventMessenger.hh  InitialisationParameters.hh  IonDrift.hh  MyHit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  TrackingAction.hh  UserG4FastSimulationModel.hh
simulationg4/SignalTest/src/: ChargeCarrier.cc  DetectorConstructionMessenger.cc  Electronics.cc  EventAction.cc  FieldMap.cc  GasMixture.cc  IonDrift.cc  MyDetector.cc  MyHit.cc  PhysicsList.cc  Reader.cc  SteppingAction.cc  UserG4FastSimulationModel.cc
simulationg4/analyseTree/: main.c
simulationg4/analyseTree/newAnalysisCode/: Analysis.h  Plot-0.98bar.C  Plot0bar.C  Plot1_tube.C  PlotAmpRiseTime.C  PlotNew.C  PlotOld.C  Reader.h  ReaderBackup.h  main.c  plot
simulationg4/ci/docker/: Dockerfile
simulationg4/garfieldpp/Source/: AvalancheMC.cc  AvalancheMicroscopic.cc  ComponentAnalyticField.cc  ComponentAnsys123.cc  ComponentFieldMap.cc  ComponentNeBem2d.cc  ComponentNeBem3d.cc  ComponentNeBem3dMap.cc  ComponentTcad2d.cc  ComponentUser.cc  DriftLineRKF.cc  Medium.cc  MediumCdTe.cc  MediumGas.cc  MediumSilicon.cc  Numerics.cc  OpticalData.cc  RandomEngineRoot.cc  Sensor.cc  SolidRidge.cc  ViewSignal.cc
(+1749 files in other folders)
